# discordgpt

./: .env.example  .gitignore  README.md  initial_prompt.example.md  poetry.toml  pyproject.toml
discordgpt/: app.py  feedback.py  settings.py
discordgpt/messaging/: direct_message_channel.py  main.py  text_channel.py
discordgpt/openai_api/: chatcompletion.py  function_calls.py
src/: app.py  client.py  feedback.py
src/messaging/: direct_message_channel.py  main.py  text_channel.py
src/openai_api/: chatcompletion.py  function_calls.py
